--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@contentful/rich-text-types": "^14.1.2",
     "gatsby": "^3.0.1",
     "gatsby-plugin-image": "^1.0.1",
     "gatsby-plugin-react-helmet": "^4.3.0",
