--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "gatsby-plugin-react-helmet": "^4.3.0",
     "gatsby-plugin-sass": "^4.3.0",
     "gatsby-plugin-sharp": "^3.0.1",
+    "gatsby-remark-embed-video": "^3.1.1",
     "gatsby-source-contentful": "^5.3.0",
     "gatsby-source-filesystem": "^3.0.0",
+    "gatsby-transformer-remark": "^4.1.0",
     "gatsby-transformer-sharp": "^3.0.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
