--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-burger-menu": "^3.0.6",
+    "react-calendar": "^3.4.0",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-parallax": "^3.3.0",
