--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-parallax": "^3.3.0",
-    "sass": "^1.32.11"
+    "sass": "^1.32.11",
+    "use-debounce": "^6.0.1"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
