--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@contentful/rich-text-types": "^14.1.2",
+    "bootstrap": "^5.1.3",
     "gatsby": "^3.0.1",
     "gatsby-plugin-image": "^1.0.1",
     "gatsby-plugin-react-helmet": "^4.3.0",
@@ -28,6 +29,7 @@
     "moment": "^2.29.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.0.0",
     "react-burger-menu": "^3.0.6",
     "react-calendar": "^3.4.0",
     "react-dom": "^17.0.1",
